# PrettyQt

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  404.html  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  SUMMARY.html  api.html  api_guidelines.html  changelog.html  contributing.html  dependency_table.html  duties.py  gen_pages.py  index.html  mkdocs.yml  module_overview.html  objects.inv  pyproject.toml  qt6.inv  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  somethingelse.html  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yaml  styles.yaml
Additional modules/: SUMMARY.html  index.html
Additional modules/SUMMARY/: index.html
Additional modules/animations/: Animator.html  CursorMoveAnimation.html  Fx.html  SUMMARY.html  SlideAnimation.html  TextAnimation.html  ZoomAnimation.html  index.html
Additional modules/constants/: SUMMARY.html  index.html
Additional modules/custom_network/: SUMMARY.html  index.html
Additional modules/custom_widgets/: AnnotatedScrollBar.html  AstViewer.html  AutoResizePlainTextEdit.html  AutoResizeTextEdit.html  BoolDictToolButton.html  BorderLayout.html  BrushEdit.html  ClickableLabel.html  CodeEditor.html  CollapsibleFrame.html  ColorChooserButton.html  ColorComboBox.html  CommandPalette.html  CrossFadeWidget.html  CursorEdit.html  ElidedLabel.html  EnumComboBox.html  EnumFlagWidget.html  FaderWidget.html  FileChooserButton.html  FileTree.html  FilterHeader.html  FlagSelectionWidget.html  FloatLineEdit.html  FlowLayout.html  FontChooserButton.html  IconBrowser.html  IconEdit.html  IconLabel.html  IconWidget.html  ImageViewer.html  InputAndSlider.html  IntLineEdit.html  KeyCombinationEdit.html  LabeledSlider.html  ListInput.html  LocaleEdit.html  LogRecordTableView.html  LogTextEdit.html  MappedCheckBox.html  (+40 more)
Additional modules/debugging/: ErrorMessageBox.html  MessageHandler.html  ProxyComparerWidget.html  QObjectDetailsDialog.html  QtLogger.html  SUMMARY.html  Stalker.html  TracebackDialog.html  index.html
Additional modules/docs/: SUMMARY.html  index.html
Additional modules/eventfilters/: AnimatedToolTipEventFilter.html  AutoSizeColumnsEventFilter.html  BaseEventFilter.html  DateLabelEventFilter.html  EventCatcher.html  HoverIconEventFilter.html  ListViewGridResizeEventFilter.html  SUMMARY.html  SectionAutoSpanEventFilter.html  SliderMoveToMouseClickEventFilter.html  TextUpdateEventFilter.html  TimeLabelEventFilter.html  index.html
Additional modules/iconprovider/: FontError.html  IconFont.html  IconicFont.html  SUMMARY.html  index.html
Additional modules/ipython/: BaseIPythonWidget.html  InProcessIPythonWidget.html  OutOfProcessIPythonWidget.html  SUMMARY.html  index.html
Additional modules/itemdelegates/: ButtonDelegate.html  EditorDelegate.html  HtmlItemDelegate.html  IconDelegate.html  MarkdownItemDelegate.html  NoFocusDelegate.html  ProgressBarDelegate.html  RadioDelegate.html  RenderLinkDelegate.html  SUMMARY.html  StarDelegate.html  WidgetDelegate.html  index.html
Additional modules/itemmodels/: ActionsModel.html  AppearanceProxyModel.html  AstModel.html  BaseDataclassModel.html  (+64 more)
Development/: Changelog.html  Dependencies.html  SUMMARY.html
Features/: SUMMARY.html  animating.html  layouts.html  models.html  proxies.html  widgets.html
Qt-based modules/: SUMMARY.html  index.html
SUMMARY/: index.html
Usage/: SUMMARY.html  bindings.html  general.html  types.html
additional_modules/: SUMMARY.html  index.html
api/: bluetooth.html  charts.html  constants.html  core.html  custom_delegates.html  custom_models.html  custom_validators.html  custom_widgets.html  designer.html  gui.html  itemdelegates.html  itemmodels.html  location.html  location.md.old  multimedia.html  multimediawidgets.html  network.html  objbrowser.html  openglwidgets.html  pdf.html  pdfwidgets.html  positioning.html  printsupport.html  qml.html  qthelp.html  quick.html  quickwidgets.html  scintilla.html  scintilla.md.old  scxml.html  scxml.md.disabled  spatialaudio.html  statemachine.html  svg.html  svgwidgets.html  syntaxhighlighters.html  syntaxhighlighters.md.disabled  test.html  texttospeech.html  validators.html  (+4 more)
api_guidelines/: bindings.html  general.html  mixintree.html  types.html
docs/: Makefile  SUMMARY.md  api.rst  api_guidelines.md  build_index.py  build_root.py  changelog.md  conf.py  dependency_table.md  gen_pages.py  index.md  index.rst  installation.rst  make.bat  mkdocs.yml  module_overview.md  modules.rst  prettyqt.core.rst  prettyqt.gui.rst  prettyqt.rst  prettyqt.widgets.composed.rst  prettyqt.widgets.rst  qt6.inv  usage.rst
features/: animating.html  delegates.html  layouts.html  models.html  pandas.html  pandasproxies.html  proxies.html  reshapeproxies.html  sliceproxies.html  sortfilterproxies.html  tools.html  validators.html  widgets.html
prettyqt/: __init__.py  keybindings.py  paths.py  pyproject.toml  qtre.py  re.py
qt_modules/: SUMMARY.html  index.html
reference/: SUMMARY.html
scripts/: bump.py  create_inv_file.py  create_screenshots.py  download_docs.py  download_lang_files.py  module_stats.py  parse_pyi.py  print_repr.py  replace.py
search/: search_index.json
src/: SUMMARY.original  index.original
tests/: __init__.py  conftest.py  test_animations.py  test_application.py  test_bluetooth.py  test_charts.py  test_composed.py  test_core.py  test_custom_animations.py  test_custom_delegates.py  test_custom_models.py  test_custom_validators.py  test_custom_widgets.py  test_designer.py  test_gui.py  test_gui.py.old  test_helpers.py  test_ipython.py  test_itemdelegates.py  test_itemmodels.py  test_location.py  test_location.py.old  test_multimedia.py  test_multimediawidgets.py  test_network.py  test_objectbrowser.py  test_openglwidgets.py  test_pdf.py  test_pdfwidgets.py  test_positioning.py  test_prettyqt.py  test_printsupport.py  test_qml.py  test_qthelp.py  test_quick.py  test_quickwidgets.py  test_regexeditor.py  test_sciscintilla.py  test_scxml.py  test_statemachine.py  (+11 more)
(+6542 files in other folders)
