[bdist_wheel]
universal = 1

[flake8]
exclude =
	docs
	.eggs/*.py
max-line-length = 90
ignore =
    E203
    W503

[aliases]
test = pytest

[mypy]
ignore_missing_imports=True
check_untyped_defs=True

[pydocstyle]
convention = google
add_ignore = D100, D101, D102, D103, D105, D107

[versioneer]
VCS = git
style = pep440
versionfile_source = prettyqt/_version.py
versionfile_build = prettyqt/_version.py
tag_prefix = ""

[coverage:report]
exclude_lines =
	if __name__ == .__main__.:

[options.entry_points]
pyinstaller40 =
    # .. _hook_registration:
    #
    # **Hook registration**: This entry point refers to a function
    # that will be invoked with no parameters. It must return a
    # sequence of strings, each element of which provides an
    # additional absolute path to search for hooks. This is equivalent
    # to passing the ``additional-hooks-dir`` `command-line option
    # <https://pyinstaller.readthedocs.io/en/stable/usage.html#what-to-bundle-where-to-search>`_
    # to PyInstaller for each string in the sequence.
    #
    # In this project, the function is ``get_hook_dirs``.
    hook-dirs = prettyqt.__pyinstaller:get_hook_dirs
